Various Fixes - SN02 Scrap only 5 equipment - Event history: node overflow - Event history: clear list on select different event - Event history: node Letters - Event history: hide no enemies - Sortie history Gauge right border

--- a/src/pages/strategy/tabs/event/event.css
+++ b/src/pages/strategy/tabs/event/event.css
@@ -375,7 +375,7 @@
 	width:130px;
 	/*height:207px;*/
 	line-height:20px;
-	margin:0px 3px 0px 2px;
+	margin:0px 2px 0px 2px;
 	background:#fff;
 	border-radius:8px;
 	float:left;
